Fix for missing telephone numbers on ios browser

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -172,7 +172,7 @@ header .intro-text .skills, .row.gig-entry{
     header .intro-text .skills {
         font-size: 1.75em;
     }
-    
+
 
 }
 
@@ -392,7 +392,7 @@ form .row:first-child .floating-label-form-group {
 }
 
 form{
-    text-align:center;   
+    text-align:center;
 }
 button#pwbutton{
      margin-top:10px;
@@ -402,12 +402,12 @@ button#pwbutton{
 }
 
 button#pwbutton:hover{
-   
+
      background-color: #{{ site.color.secondary-dark }};
 }
 input#exampleInputName2{
     border:2px solid #{{ site.color.secondary }};
-    
+
 }
 footer {
     color: #fff;
@@ -552,4 +552,9 @@ p.centred{
 
 div.content {
     display: none;
+}
+
+a[href^=tel] {
+    color: inherit;
+    text-decoration: none;
 }
